El video no funciono por lo tanto lo descarte Se modificaron algunos fondos de las secciones

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 <body>
     <section class="BG-portfolio">
         <div class="navbar__video-container">
-            <video class="navbar__video" src="./Video/BackgroundFondo.mp4" autoplay loop poster="./Images/poster.png">
-            </video>
         </div>
         <article class="navbar" id="navbar">
             <section class="navbar__items" id="navbar__items">
@@ -100,7 +98,7 @@
             </section>
             <section>
                 <article class="experience" id="experience">
-                    <h1 class="experience__title">Experiencia y habilidades</h1>
+                    <h1 class="experience__title">Experiencia</h1>
                     <p class="experience__p">
                         Estas son algunas de las empresas para las cuales he trabajado brindando Soporte técnico,
                         <span class="experience__span">para más información de mis funciones revisa mi
@@ -116,8 +114,8 @@
                             </div>
                             <ul>
                                 <h4 class="experience-bussines__title">Sonda</h4>
-                                <li>IT Support</li>
-                                <li>2019-2021</li>
+                                <li class="experience-bussines__li">IT Support</li>
+                                <li class="experience-bussines__li">2019-2021</li>
                             </ul>
                             <h2 class="experience-bussines__sub-title">2 años</h2>
                         </div>
@@ -129,8 +127,8 @@
                             </div>
                             <ul>
                                 <h4 class="experience-bussines__title">IBM</h4>
-                                <li>IT Support</li>
-                                <li>2021-2022</li>
+                                <li class="experience-bussines__li">IT Support</li>
+                                <li class="experience-bussines__li">2021-2022</li>
                             </ul>
                             <h2 class="experience-bussines__sub-title">1 años</h2>
                         </div>
@@ -142,8 +140,8 @@
                             </div>
                             <ul>
                                 <h4 class="experience-bussines__title">Nanopay</h4>
-                                <li>Specialist IT</li>
-                                <li>2022-2022</li>
+                                <li class="experience-bussines__li">Specialist IT</li>
+                                <li class="experience-bussines__li">2022-2022</li>
                             </ul>
                             <h2 class="experience-bussines__sub-title">6 meses</h2>
                         </div>
