Se agregan nuevos estilos a los svg, se cuadran los frames ya que en algunos dispositivos habia desbordamiento y se mejora el contraste y tipografia de algunas sesiones

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <section class="BG-portfolio">
         <article class="navbar" id="navbar">
-        <div class="navbar__video-container">
+        <div class="navbar__img-container">
         </div>
             <section class="navbar__items" id="navbar__items">
                 <ul class="navbar-ul__routes" id="navbar-ul__routes">
@@ -32,9 +32,9 @@
                 <div></div>
             </button>
             <section class="home" id="home">
-                <article class="home-container">
+                <div class="home-container">
                     <img class="home-container__img" src="./Images/firma.png" alt="">
-                </article>
+                </div>
                 <section class="home-body">
                     <h1 class="home-body__title">
                         !Hola 👋🏽, Soy Juan Durán,
@@ -55,21 +55,21 @@
                         <p class="about_me__p">Desarrollador Front-end y estudiante de ingeniería de sistemas,
                             responsable,
                             con capacidad de escucha
-                            y trabajo en equipo, soy ambicioso, dispuesto a adaptarme y aceptar retos que impulsen mi
+                            y trabajo en equipo, dispuesto a adaptarme y aceptar retos que impulsen mi
                             carrera
                             profesional.
                         </p>
                         <p class="about_me__p">Cuento con +3 años de experiencia brindando soporte Técnico de primer,
                             segundo y tercer nivel,
-                            adoptando un muy buen nivel de manejo con el usuario final para el correcto uso de los
+                            adoptando un muy buen estándar de manejo con el usuario final para el correcto uso de los
                             aplicativos
-                            corporativos de acuerdo con los estándares de la compañía.
+                            corporativos de acuerdo con los objetivos de la compañía.
                         </p>
                         <p class="about_me__p">
                             Dia a Dia me adentro más en el mundo del desarrollo, conociendo y mejorando mis habilidades
                             para
                             ser
-                            1% mejor todos los días y generar cambios estupendos en mi campo profesional.
+                            1% mejor todos los días y generar cambios estupendos en mi campo profesional, sé que podremos trabajar juntos te invito a contactarme 👇🏽.
                         </p>
                         <article class="about_me__container-buttons">
                             <a href="#contact">
@@ -320,7 +320,7 @@
                 <a href="mailto:juancho1952@gmail.com" target="_blank"><i class='bx bx-mail-send contact-icon'></i>
                     <h1>Correo: juancho1952@gmail.com</h1>
                 </a>
-                <a href="https://wa.me/573242024334?text=Hola,%20quiero%20saber%20más%20sobre%20ti%20contactame"
+                <a href="https://wa.me/573242024334?text=Hola,%20quiero%20saber%20más%20sobre%20ti"
                     target="_blank"><i class='bx bxl-whatsapp contact-icon'></i>
                     <h1>WhatsApp: 3242024334</h1>
                 </a>
