Actualización de mi CV

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     <span class="text">Contactame</span>
                                 </button>
                             </a>
-                            <a href="./CV/Hoja de vida Juan Durán Nueva.pdf" download="Hoja-de-vida-Juan-Duran">
+                            <a href="./CV/Hoja de vida Juan Durán desarrollador.pdf" download="Hoja de vida Juan Durán">
                                 <button class="about_me__button">
                                     <div class="svg-Wrapper-1">
                                         <div class="svg-wrapper">
@@ -102,7 +102,7 @@
                     <p class="experience__p">
                         Estas son algunas de las empresas para las cuales he trabajado brindando Soporte técnico,
                         <span class="experience__span">para más información de mis funciones revisa mi
-                            <a href="./CV/Hoja de vida Juan Durán Nueva.pdf" download="Hoja-de-vida-Juan-Duran">CV</a></span>
+                            <a href="./CV/Hoja de vida Juan Durán desarrollador.pdf" download="Hoja de vida Juan Durán">CV</a></span>
                     </p>
                     <section class="experience-bussines">
                         <div class="experience-bussines__info">
